icon and title change

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🏈</text></svg>" />
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Football_Icon.svg/2406px-Football_Icon.svg.png,<svg xmlns='https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Football_Icon.svg/2406px-Football_Icon.svg.png' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🏈</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fantasy Football Tracker</title>
+    <title>Wolfpack Fantasy Football League</title>
   </head>
   <body>
     <div id="root"></div>
